data/apps/argocd/traefik-middleware/body-writer_coder-banner/htttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
  namespace: coder
spec:
  hostnames:
    - coder.xxx.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: banner
      backendRefs:
        - group: ""
          kind: Service
          name: coder-exalidraw
          port: 80
          weight: 1
